--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "classnames": "^2.2.6",
     "cross-env": "^7.0.2",
     "global": "^4.4.0",
+    "hookrouter": "^1.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "hookrouter": "^1.2.3",
+    "url": "^0.11.0",
     "webpack": "^4.44.2"
   },
   "devDependencies": {
