--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@svgr/webpack": "^5.4.0",
     "@types/classnames": "^2.2.11",
     "@types/hookrouter": "^2.2.3",
+    "@types/jest": "^26.0.15",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
@@ -47,6 +48,8 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "husky": "^4.3.0",
+    "jest": "^26.6.3",
+    "js-test": "0.0.1",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
@@ -54,6 +57,7 @@
     "sass": "^1.27.0",
     "sass-loader": "^10.0.4",
     "style-loader": "^2.0.0",
+    "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.7",
     "typescript": "^4.0.3",
     "typescript-plugin-css-modules": "^2.8.0",
